# davichete-page

./: .igniterc  Cargo.toml  README.md
src/: .main.rs.swp  main.rs
static/root/: index.html
static/root/css/: github.css  not-found.css  style.css
static/root/html/: blog.html  blog_entry.html  notfound.html
static/root/html/blog/: blog-index.html  index.html
static/root/html/blog/2024/10/02/: my-new-blog.html
static/root/js/: index.js
