[package]
name = "davichete-page"
version = "0.1.0"
authors = ["davichete"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="^3.0.0", features = ["openssl"] }
actix-files = "^0.3.0"
openssl = "^0.10.30"
rae-rust = { git = "https://github.com/Davichet-e/RAE-API-Rust", branch = "davichete-page" }
