[package]
name = "davichete-page"
version = "0.1.0"
authors = ["davichete"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
awc = { version = "3.5", features = ["openssl"] }
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
lettre = "0.11"
